<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ShakeACallActivity!</string>
    <string name="app_name">ShftyRide</string>
    <string name="strTxtSelectContact">Select Contact</string>
    <string name="strTxtWelcomeText">Touch a contact to set it as Shake Number</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_">YELP</string>
    <string name="title_activity_login_">Login_Activity</string>
    <string name="login_page">Welcome</string>

    <color name="white_color">#3991FF</color>
    <color name="bg_color">#4B4FB9</color>

    <string name="login_page_about">Looking for cheapest best fall detection system</string>
    <string name="email_id">User Name</string>
    <string name="password">Password</string>

    <color name="hint_color">#000</color>

    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>

    <color name="yellow">#EFFF20</color>
    <color name="red">#FF0000</color>
    <string name="title_activity_register_">Register_Activity</string>
    <string name="title_activity_start_activity">Start_activity</string>
    <string name="title_activity_signup_activity">Signup_activity</string>

    <string name="title_name">Registration</string>
    <string name="hint_email">email address</string>
    <string name="hint_password">password address</string>
    <string name="conform_password">Conform Password</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_start">START</string>
    <string name="btn_stop">STOP</string>
    <string name="btn_add">ADD</string>
    <string name="btn_update">UPDATE</string>
    <string name="btn_select">SELECT</string>


</resources>


