<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_spla"
    tools:context="com.example.spiro.saftyride.Start_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        tools:context="com.example.motionfind.Start_activity" >

        <EditText
            android:id="@+id/number"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/values"
            android:hint="Enter Mobile Number"
            android:padding="10dp"
            android:inputType="number"/>
        <EditText
            android:id="@+id/number2"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/values"
            android:hint="Enter Mobile Number"
            android:padding="10dp"
            android:inputType="number"/>

        <EditText
            android:id="@+id/message"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/values"
            android:hint="Enter Message"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_select"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_start2"
                android:text="@string/btn_select" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_start2"
                android:text="@string/btn_add" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_start2"
                android:text="@string/btn_update" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/btn_start"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_start"
            android:text="@string/btn_stop"
            android:visibility="gone" />

        <TextView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="#ff0000"
            android:textSize="20dp"
            android:textStyle="bold" >

        </TextView>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn"
            android:text="@string/btn_start"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logout" />

    </LinearLayout>
</ScrollView>

